--- a/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
+++ b/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
@@ -1,24 +1,19 @@
 <wicket:panel>
- <div id="side_menu_container">
-   <ul id="side_menu">
-      <li><a wicket:id="home-page">HOME</a></li>
-      <li><a wicket:id="schedule">SCHEDULE</a></li>
-      <li><a wicket:id="search">SEARCH</a></li>
-      <li><a wicket:id="my-oders">MY ODERS</a></li>
-      <li><a wicket:id="my-profile">MY PROFILE</a></li>
-      <li><a wicket:id="Feedback">FEEDBACK</a></li>
-    </ul>
-    <!--start signup box-->
-   <div class="side_menu_box" style="height:110px;">
-      <div class="top">Login</div>
-      <form action="" method="post">
-        <input name="name" type="text" class="side_menu_box_field" id="name" value="Name" size="11" />
-        <input name="password" type="password" class="side_menu_box_field" id="pass" value="passs" size="11" />
-        <input name="submit" type="image" class="side_menu_box_button" id="submit" src="images/button_submit.gif" />
-      </form>
-      <a class="registr-linc" wicket:id="registration">Registration</a>
-    </div>
- </div>
- <!--end signup box-->
+
+	<div class="menu">
+		<ul id="side_menu">
+			<li><a wicket:id="home-page">HOME</a></li>
+			<li><a wicket:id="schedule">SCHEDULE</a></li>
+			<li><a wicket:id="search">SEARCH</a></li>
+			<li><a wicket:id="my-oders">MY ODERS</a></li>
+			<li><a wicket:id="my-profile">MY PROFILE</a></li>
+			<li><a wicket:id="feedback">FEEDBACK</a></li>
+			<li><a wicket:id="setting">SETTING</a></li>
+			
+		</ul>
+	</div>
+
+
+	<!--end signup box-->
 
 </wicket:panel>
