--- a/webapp/src/main/webapp/css/contenet.css
+++ b/webapp/src/main/webapp/css/contenet.css
@@ -51,9 +51,15 @@ td {
 }
 /*end table style*/
 
-#paging{
-	position:right;
-	float:left;
-	margin:10px 10px 10px 10px;
+.pading1{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    overflow: auto;   
 
 }
