--- a/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
+++ b/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
@@ -8,7 +8,9 @@
 			<li><a wicket:id="my-oders">MY ODERS</a></li>
 			<li><a wicket:id="my-profile">MY PROFILE</a></li>
 			<li><a wicket:id="feedback">FEEDBACK</a></li>
-			<li><a wicket:id="setting">SETTING</a></li>
+			<li><a wicket:id="setting">SETTINGS</a></li>
+			<li><a wicket:id="login">LOGIN</a></li>
+			<li><a wicket:id="logout">LOGOUT</a></li>
 			
 		</ul>
 	</div>
