--- a/webapp/src/main/webapp/css/contenet.css
+++ b/webapp/src/main/webapp/css/contenet.css
@@ -6,6 +6,7 @@
 	/*padding on the right is because the column if floating to the right*/
 	line-height: 1.5em;
 	width: 790px; /*784px minus padding*/
+	overflow: auto;
 	-height: 300px;
 	-float: right;
 }
@@ -13,6 +14,7 @@
 /*table style*/
 table {
 	border-collapse: collapse;
+
 }
 
 th {
@@ -27,7 +29,7 @@ tr {
 	color: #666B85;
 }
 
-tr:hover .table-admin td {
+tr:hover td {
 	background: #4E5066;
 	color: #FFFFFF;
 }
@@ -77,7 +79,7 @@ td {
     margin-left:auto;
     margin-right:auto;
 
-    max-width: 500px;
+   -- max-width: 500px;
     background: #D2E9FF;
     padding: 20px 20px 20px 20px;
     font: 12px Arial, Helvetica, sans-serif;
@@ -130,15 +132,15 @@ td {
 .edit-admin-form input[type="checkbox"]{
     color: #888;
     --width: 50%;
-    padding: 0px 0px 0px 5px;
+    -padding: 0px 0px 0px 5px;
     border: 1px solid #C5E2FF;
     background: #FBFBFB;
     outline: 0;
     -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
     -box-shadow: inset 0px 1px 6px #ECF3F5;
     -font: 200 12px/25px Arial, Helvetica, sans-serif;
-    height: 30px;
-    line-height:15px;
+    -height: 30px;
+    -line-height:15px;
     -margin: 2px 6px 16px 0px;
 }
 
