--- a/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
+++ b/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
@@ -2,22 +2,22 @@
 
 	<div class="menu">
 		<ul id="side_menu">
-			<li><a wicket:id="home-page">HOME</a></li>
-			<li><a wicket:id="schedule">SCHEDULE</a></li>
-			<li><a wicket:id="search">SEARCH</a></li>
-			<li><a wicket:id="my-oders">MY ODERS</a></li>
-			<li><a wicket:id="my-profile">MY PROFILE</a></li>
-			<li><a wicket:id="feedback">FEEDBACK</a></li>
-			<li><a wicket:id="setting">SETTINGS</a></li>
+			<li><a wicket:id="home-page"><wicket:message key="menu.home"/></a></li>
+			<li><a wicket:id="schedule"><wicket:message key="menu.schedule"/></a></li>
+			<li><a wicket:id="search"><wicket:message key="menu.search"/></a></li>
+			<li><a wicket:id="my-oders"><wicket:message key="menu.oders"/></a></li>
+			<li><a wicket:id="my-profile"><wicket:message key="menu.profile"/></a></li>
+			<li><a wicket:id="feedback"><wicket:message key="menu.feedback"/></a></li>
+			<li><a wicket:id="setting"><wicket:message key="menu.setting"/></a></li>
 			
 			<wicket:enclosure child="login">
-			<li><a wicket:id="login">LOGIN</a></li>
+			<li><a wicket:id="login"><wicket:message key="menu.login"/></a></li>
 				<ul>
-					<li><a wicket:id="registration">registration</a></li>
+					<li><a wicket:id="registration"><wicket:message key="menu.registr"/></a></li>
 				</ul>
 			</wicket:enclosure>	
 			
-			<li><a wicket:id="logout">LOGOUT</a></li>
+			<li><a wicket:id="logout"><wicket:message key="menu.logoul"/></a></li>
 			
 		</ul>
 	</div>
