--- a/webapp/src/main/webapp/css/contenet.css
+++ b/webapp/src/main/webapp/css/contenet.css
@@ -12,116 +12,122 @@
 }
 
 /* home page*/
-
 .search-flight {
 	position: absolute;
-	width:280px;
-	height:280px
-    margin-left:auto;
-    margin-right:auto;
-
-   -- max-width: 500px;
-    background: #D2E9FF;
-    padding: 20px 20px 20px 20px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #666;
+	width: 280px;
+	height: 280px margin-left:auto;
+	margin-right: auto; --
+	max-width: 500px;
+	background: #D2E9FF;
+	padding: 20px 20px 20px 20px;
+	font: 12px Arial, Helvetica, sans-serif;
+	color: #666;
 }
+
 .search-flight h2 {
-    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
-    padding: 10px 10px 10px 20px;
-    display: block;
-    background: #C0E1FF;
-    border-bottom: 1px solid #B8DDFF;
-    margin: -20px -20px 15px;
+	font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
+	padding: 10px 10px 10px 20px;
+	display: block;
+	background: #C0E1FF;
+	border-bottom: 1px solid #B8DDFF;
+	margin: -20px -20px 15px;
 }
+
 .search-flight h2>span {
-    display: block;
-    font-size: 11px;
+	display: block;
+	font-size: 11px;
 }
 
 .search-flight label>span {
-    float: left;
-    margin-top: 10px;
-    color: #5E5E5E;
+	float: left;
+	margin-top: 10px;
+	color: #5E5E5E;
 }
+
 .search-flight label {
-    display: block;
-    margin: 0px 0px 5px;
+	display: block;
+	margin: 0px 0px 5px;
 }
+
 .search-flight label>span {
-    float: left;
-    width: 20%;
-    text-align: right;
-    padding-right: 15px;
-    margin-top: 10px;
-    font-weight: bold;
-}
-.search-flight input[type="text"], .search-flight input[type="email"], .search-flight textarea, .search-flight select {
-    color: #888;
-    width: 50%;
-    padding: 0px 0px 0px 5px;
-    border: 1px solid #C5E2FF;
-    background: #FBFBFB;
-    outline: 0;
-    -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
-    box-shadow: inset 0px 1px 6px #ECF3F5;
-    font: 200 12px/25px Arial, Helvetica, sans-serif;
-    height: 20px;
-    line-height:10px;
-    margin: 2px 6px 16px 0px;
-}
-.search-flight input[type="checkbox"]{
-    color: #888;
-    --width: 50%;
-    -padding: 0px 0px 0px 5px;
-    border: 1px solid #C5E2FF;
-    background: #FBFBFB;
-    outline: 0;
-    -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
-    -box-shadow: inset 0px 1px 6px #ECF3F5;
-    -font: 200 12px/25px Arial, Helvetica, sans-serif;
-    -height: 30px;
-    -line-height:15px;
-    -margin: 2px 6px 16px 0px;
+	float: left;
+	width: 20%;
+	text-align: right;
+	padding-right: 15px;
+	margin-top: 10px;
+	font-weight: bold;
 }
 
-.search-flight textarea{
-    height:80px;
-    padding: 5px 0px 0px 5px;
-    width: 70%;
+.search-flight input[type="text"], .search-flight input[type="email"],
+	.search-flight textarea, .search-flight select {
+	color: #888;
+	width: 50%;
+	padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	box-shadow: inset 0px 1px 6px #ECF3F5;
+	font: 200 12px/25px Arial, Helvetica, sans-serif;
+	height: 20px;
+	line-height: 10px;
+	margin: 2px 6px 16px 0px;
 }
+
+.search-flight input[type="checkbox"] {
+	color: #888; -
+	-width: 50%;
+	-padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	-box-shadow: inset 0px 1px 6px #ECF3F5;
+	-font: 200 12px/25px Arial, Helvetica, sans-serif;
+	-height: 30px;
+	-line-height: 15px;
+	-margin: 2px 6px 16px 0px;
+}
+
+.search-flight textarea {
+	height: 80px;
+	padding: 5px 0px 0px 5px;
+	width: 70%;
+}
+
 .search-flight select {
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-   appearance:none;
-    -webkit-appearance:none; 
-   -moz-appearance: none;
-    text-indent: 0.01px;
-    text-overflow: '';
-    width: 70%;
-}
--.search-flight .button{
-    padding: 10px 30px 10px 30px;
-    background: #66C1E4;
-    border: none;
-    color: #FFF;
-    box-shadow: 1px 1px 1px #4C6E91;
-    -webkit-box-shadow: 1px 1px 1px #4C6E91;
-    -moz-box-shadow: 1px 1px 1px #4C6E91;
-    text-shadow: 1px 1px 1px #5079A3;
-    
-}
-.search-flight .button:hover{
-    background: #3EB1DD;
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	text-indent: 0.01px;
+	text-overflow: '';
+	width: 70%;
 }
 
+-
+.search-flight .button {
+	padding: 10px 30px 10px 30px;
+	background: #66C1E4;
+	border: none;
+	color: #FFF;
+	box-shadow: 1px 1px 1px #4C6E91;
+	-webkit-box-shadow: 1px 1px 1px #4C6E91;
+	-moz-box-shadow: 1px 1px 1px #4C6E91;
+	text-shadow: 1px 1px 1px #5079A3;
+}
+
+.search-flight .button:hover {
+	background: #3EB1DD;
+}
 
 /* end home page*/
 
 /*table style*/
 table {
 	border-collapse: collapse;
-
+	-margin: auto;
 }
 
 th {
@@ -183,145 +189,223 @@ td {
 
 /* Elegant Aero */
 .edit-admin-form {
-    margin-left:auto;
-    margin-right:auto;
-
-   -- max-width: 500px;
-    background: #D2E9FF;
-    padding: 20px 20px 20px 20px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #666;
+	margin-left: auto;
+	margin-right: auto; --
+	max-width: 500px;
+	background: #D2E9FF;
+	padding: 20px 20px 20px 20px;
+	font: 12px Arial, Helvetica, sans-serif;
+	color: #666;
 }
+
 .edit-admin-form h2 {
-    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
-    padding: 10px 10px 10px 20px;
-    display: block;
-    background: #C0E1FF;
-    border-bottom: 1px solid #B8DDFF;
-    margin: -20px -20px 15px;
+	font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
+	padding: 10px 10px 10px 20px;
+	display: block;
+	background: #C0E1FF;
+	border-bottom: 1px solid #B8DDFF;
+	margin: -20px -20px 15px;
 }
+
 .edit-admin-form h2>span {
-    display: block;
-    font-size: 11px;
+	display: block;
+	font-size: 11px;
 }
 
 .edit-admin-form label>span {
-    float: left;
-    margin-top: 10px;
-    color: #5E5E5E;
+	float: left;
+	margin-top: 10px;
+	color: #5E5E5E;
 }
+
 .edit-admin-form label {
-    display: block;
-    margin: 0px 0px 5px;
-}
-.edit-admin-form label>span {
-    float: left;
-    width: 20%;
-    text-align: right;
-    padding-right: 15px;
-    margin-top: 10px;
-    font-weight: bold;
-}
-.edit-admin-form input[type="text"], .edit-admin-form input[type="email"], .edit-admin-form textarea, .edit-admin-form select {
-    color: #888;
-    width: 50%;
-    padding: 0px 0px 0px 5px;
-    border: 1px solid #C5E2FF;
-    background: #FBFBFB;
-    outline: 0;
-    -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
-    box-shadow: inset 0px 1px 6px #ECF3F5;
-    font: 200 12px/25px Arial, Helvetica, sans-serif;
-    height: 30px;
-    line-height:15px;
-    margin: 2px 6px 16px 0px;
-}
-.edit-admin-form input[type="checkbox"]{
-    color: #888;
-    --width: 50%;
-    -padding: 0px 0px 0px 5px;
-    border: 1px solid #C5E2FF;
-    background: #FBFBFB;
-    outline: 0;
-    -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
-    -box-shadow: inset 0px 1px 6px #ECF3F5;
-    -font: 200 12px/25px Arial, Helvetica, sans-serif;
-    -height: 30px;
-    -line-height:15px;
-    -margin: 2px 6px 16px 0px;
+	display: block;
+	margin: 0px 0px 5px;
 }
 
-.edit-admin-form textarea{
-    height:100px;
-    padding: 5px 0px 0px 5px;
-    width: 70%;
+.edit-admin-form label>span {
+	float: left;
+	width: 20%;
+	text-align: right;
+	padding-right: 15px;
+	margin-top: 10px;
+	font-weight: bold;
 }
+
+.edit-admin-form input[type="text"], .edit-admin-form input[type="email"],
+	.edit-admin-form textarea, .edit-admin-form select {
+	color: #888;
+	width: 50%;
+	padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	box-shadow: inset 0px 1px 6px #ECF3F5;
+	font: 200 12px/25px Arial, Helvetica, sans-serif;
+	height: 30px;
+	line-height: 15px;
+	margin: 2px 6px 16px 0px;
+}
+
+.edit-admin-form input[type="checkbox"] {
+	color: #888; -
+	-width: 50%;
+	-padding: 0px 0px 0px 5px;
+	border: 1px solid #C5E2FF;
+	background: #FBFBFB;
+	outline: 0;
+	-webkit-box-shadow: inset 0px 1px 6px #ECF3F5;
+	-box-shadow: inset 0px 1px 6px #ECF3F5;
+	-font: 200 12px/25px Arial, Helvetica, sans-serif;
+	-height: 30px;
+	-line-height: 15px;
+	-margin: 2px 6px 16px 0px;
+}
+
+.edit-admin-form textarea {
+	height: 100px;
+	padding: 5px 0px 0px 5px;
+	width: 70%;
+}
+
 .edit-admin-form select {
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-   appearance:none;
-    -webkit-appearance:none; 
-   -moz-appearance: none;
-    text-indent: 0.01px;
-    text-overflow: '';
-    width: 70%;
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	background: #fbfbfb url('down-arrow.png') no-repeat right;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	text-indent: 0.01px;
+	text-overflow: '';
+	width: 70%;
 }
--.edit-admin-form .button{
-    padding: 10px 30px 10px 30px;
-    background: #66C1E4;
-    border: none;
-    color: #FFF;
-    box-shadow: 1px 1px 1px #4C6E91;
-    -webkit-box-shadow: 1px 1px 1px #4C6E91;
-    -moz-box-shadow: 1px 1px 1px #4C6E91;
-    text-shadow: 1px 1px 1px #5079A3;
-    
+
+-
+.edit-admin-form .button {
+	padding: 10px 30px 10px 30px;
+	background: #66C1E4;
+	border: none;
+	color: #FFF;
+	box-shadow: 1px 1px 1px #4C6E91;
+	-webkit-box-shadow: 1px 1px 1px #4C6E91;
+	-moz-box-shadow: 1px 1px 1px #4C6E91;
+	text-shadow: 1px 1px 1px #5079A3;
 }
-.edit-admin-form .button:hover{
-    background: #3EB1DD;
+
+.edit-admin-form .button:hover {
+	background: #3EB1DD;
 }
 
 /*end style for form */
 
 /*style create button*/
-.create-button{
-  margin: 20px 0px 20px 0px;
+.create-button {
+	margin: 20px 0px 20px 0px;
 }
-
 
 /*end style create button*/
 
 /*table-flights*/
 .flight-table table {
-  color: #333;
-  font-family: sans-serif;
-  font-size: .9em;
-  font-weight: 300;
-  text-align: left;
-  line-height: 40px;
-  border-spacing: 0;
-  border: 2px solid #2082c8;
-  width: 500px;
-  margin: 50px auto;
+	color: #333;
+	font-family: sans-serif;
+	font-size: .9em;
+	font-weight: 300;
+	text-align: center;
+	line-height: 40px;
+	border-spacing: 0;
+	-border: 2px solid #2082c8;
+	width: 750px;
+	margin: 50px auto;
 }
 
-.flight-table thead tr:first-child {
-  background: #2082c8;
-  color: #fff;
-  border: none;
+.flight-table th .flight-table tr:first-child {
+	background: #2082c8;
+	color: #fff;
+	border: none;
 }
 
-.flight-table th {font-weight: bold;}
-.flight-table th:first-child, td:first-child {padding: 0 15px 0 20px;}
+.flight-table th {
+	font-weight: bold;
+}
 
-.flight-table thead tr:last-child th {border-bottom: 3px solid #ddd;}
+.flight-table th:first-child, .flight-table td:first-child {
+	padding: 0 15px 0 20px;
+}
 
-.flight-table tbody tr:hover {background-color: #ffeeff;}
-.flight-table tbody tr:last-child td {border: none;}
-.flight-table tbody td {border-bottom: 1px solid #ddd;}
+.flight-table th .flight-table tr:last-child th {
+	border-bottom: 3px solid #ddd;
+}
+
+.flight-table tbody .flight-table tr:hover {
+	background-color: #ffeeff;
+}
+
+.flight-table tbody .flight-table tr:last-child .flight-table td {
+	border: none;
+}
+
+.flight-table tbody .flight-table td {
+	border-bottom: 1px solid #ddd;
+}
 
 .flight-table td:last-child {
-  text-align: right;
-  padding-right: 10px;
+	text-align: center;
+	padding-right: 10px;
 }
 /*end table-flights*/
+
+/*Contact Page*/
+
+.left_details {
+	float:left;
+	width:240px;
+}
+.right_details {
+	float:left;
+	width:415px;
+	margin-left:50px;
+	padding-left:20px;
+	border-left:1px solid #dfecf2;
+}
+.contact_title {
+	color:#2d9fce;
+	font-weight:bold;
+	float:left;
+	width:70px;
+}
+.contact_detail {
+	float:left;
+	width:100px;
+	clear:right;
+}
+.forms {
+	background-color:#FFFFFF !important; /*the important gets rid of the yellow google toolbar field style*/
+	border:1px solid #c8cdd2 !important;
+	margin:3px 0px;
+	padding:4px;
+}
+.blue {
+	color:#2d9fce;
+}
+#contact {
+	border:0;
+}
+#contact label {
+	float:left;
+	width:80px;
+	margin-right:15px;
+	clear:left;
+	color:#2d9fce;
+	font-weight:bold;
+	text-align:right;
+	height:32px;
+}
+#contact input, #contact textarea {
+	
+}
+#contact .submit_button {
+	clear:left;
+	margin-left:95px;
+}
+/*end Contact Page*/
