--- a/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
+++ b/webapp/src/main/java/by/bogdevich/training/airline/webapp/component/menu/MenuUser.html
@@ -4,7 +4,7 @@
 		<ul id="side_menu">
 			<li><a wicket:id="home-page"><wicket:message key="menu.home"/></a></li>
 			<li><a wicket:id="schedule"><wicket:message key="menu.schedule"/></a></li>
-			<li><a wicket:id="search"><wicket:message key="menu.search"/></a></li>
+			<!-- <li><a wicket:id="search"><wicket:message key="menu.search"/></a></li> -->
 			<li><a wicket:id="my-oders"><wicket:message key="menu.oders"/></a></li>
 			<li><a wicket:id="my-profile"><wicket:message key="menu.profile"/></a></li>
 			<li><a wicket:id="feedback"><wicket:message key="menu.feedback"/></a></li>
