--- a/webapp/src/main/webapp/css/contenet.css
+++ b/webapp/src/main/webapp/css/contenet.css
@@ -1,4 +1,5 @@
 .background-home img {
+	background-image: url(images/background-images.jpg);
     max-width: 100%;
     max-height: 100%;
     vertical-align: middle;
@@ -20,12 +21,12 @@
 /* home page*/
 .search-flight {
 	position: absolute;
-	width: 280px;
+	width: 380px;
 	height: 280px margin-left:auto;
-	margin-right: auto; --
-	max-width: 500px;
-	background: #D2E9FF;
-	padding: 20px 20px 20px 20px;
+	margin: 20px 120px 20px 120px; 
+	max-width: 700px;
+	background: #82b9f7;
+	padding: 40px 50px 40px 50px;
 	font: 12px Arial, Helvetica, sans-serif;
 	color: #666;
 }
